--- a/web/css/CanvasView.css
+++ b/web/css/CanvasView.css
@@ -2,8 +2,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* width: 100vw; */
-    /* position: relative; */
     position: absolute;
     top: 0;
     right: 0;
@@ -13,36 +11,24 @@
 }
 
 #board {
-    /* height: auto;
-    user-select: none;
-    white-space: nowrap;
-    padding: 5px;
-    position: relative;
-    flex-grow: 1;
-    width: fit-content;
-    background-color: rgb(131, 140, 145); */
-
     -webkit-user-select: none;
     user-select: none;
     white-space: nowrap;
     padding: 5px;
-    /* margin-bottom: 8px; */
     overflow-x: auto;
-    overflow-y: hidden;
-    /* padding-bottom: 8px; */
+    overflow-y: auto;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-
 }
 
 /*#region 리스트*/
 .list-wrapper {
     width: 272px;
     margin: 0 4px;
-    height: 100%;
+    min-height: 100%;
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
@@ -52,7 +38,6 @@
 #mod-list-float {
     background-color: #6F777B;
     height: auto;
-    /* background-color: rgb(172, 172, 172); */
 }
 
 #mod-list-float>div {
@@ -78,7 +63,7 @@
 }
 
 .float-list-target,
-.float-item-target {
+.float-card-target {
     cursor: pointer;
     position: absolute;
     top: 0;
@@ -146,7 +131,7 @@
 
 
 .list-name-input,
-.item-name-input {
+.card-name-input {
     width: -webkit-fill-available;
     background-color: #fff;
     border: none;
@@ -159,7 +144,7 @@
 }
 
 .list-add-controls,
-.item-add-controls {
+.card-add-controls {
     display: flex;
 }
 
@@ -187,7 +172,7 @@
 /*#endregion 리스트 - 추가(active 상태)*/
 
 /*#region 아이템 - 추가(active 상태)*/
-.item-wrapper {
+.card-wrapper {
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 1px 0 rgb(9 30 66 / 25%);
@@ -202,22 +187,24 @@
     z-index: 0;
 }
 
-.add-item {
+.add-card {
     padding: 4px 8px;
 }
 
-.add-item .open-add {
+.add-card .open-add {
     color: rgb(54, 54, 54);
 }
 
-#mod-item-float {
+#mod-card-float {
     background-color: #d4d4d4;
 }
 
-#mod-item-float>div {
+#mod-card-float>div {
     visibility: hidden;
 }
 
-.item-title {
+.card-title {
     word-wrap: break-word
 }
+
+/*#endregion 아이템 - 추가(active 상태)*/
